Arreglado menu para anonymous

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,6 +1,6 @@
 #Updated at Tue Nov 22 17:22:14 ART 2011
 #Tue Nov 22 17:22:14 ART 2011
-application_name=Umbook
+application_name=UMBook
 label_com_umbook_server_domain_album=Album
 label_com_umbook_server_domain_album_comentarios=Comentarios
 label_com_umbook_server_domain_album_descripcion=Descripcion
@@ -98,7 +98,7 @@ menu_category_comentariofoto_label=Comentario Foto
 menu_category_comentariopublicacion_label=Comentario Publicacion
 menu_category_denuncia_label=Denuncia
 menu_category_foto_label=Foto
-menu_category_notificacion_label=Notificacion
+menu_category_notificacion_label=Notificaciones
 menu_category_publicacion_label=Publicacion
 menu_category_usuario_label=Usuario
 menu_item_album_list_label=Albums
@@ -135,3 +135,7 @@ menu_item_publicacion_receptor_label=Receptor
 menu_item_usuario_list_label=Usuarios
 menu_item_usuario_new_label=Usuario
 menu_item_usuario_nombre_usuario_label=Nombre_usuario
+menu_category_login_label=Login
+menu_category_registro_label=Registro
+menu_item_login_label=Identificarme
+menu_item_registro_label=Registrarme
